2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (INCLUDES): Added missing -I$(top_srcdir)
	(bin_PROGRAMS): Rename binary gnome2-settings-daemon

	* gnome-settings-daemon.c (main): Enable code to load settings;
	call gnome_settings_background_load too

	* gnome-settings-background.c (gnome_settings_background_init):
	Use the correct key to register the callback

Wed Jan  9 21:22:30 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-keyboard.c (filter): weee!  locate_cursor works
	now!!!!
	* gnome-settings-locate-pointer: speed up animation.

2002-01-09  Anders Carlsson  <andersca@gnu.org>

	* gnome-settings-daemon.c (main): Call gconf_client_add_dir.

Tue Jan  8 15:50:59 2002  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am: Add locate-pointer.
	* gnome-settings-keyboard.c: Initial attempt at locate-pointer.
	Don't understand XKB enough to figure it out.
	* gnome-settings-locate-pointer.[ch]: Draw the locate pointer
	box.  Pretty snazzy for a useless (but fun) feature.
	* gnome-settings-mouse.c:  Move locate pointer to it's own file.

2002-01-08  Richard Hestilow  <hestilow@ximian.com>

	* gnome-settings-daemon.c (main): Initialize libgnomeui,
	and load sounds.

	* gnome-settings-sound.c (stop_esd): Just tell esd to let go
	of /dev/dsp.

2002-01-04  Bradford Hovinen  <hovinen@ximian.com>

	* all: Convert from GConfEngine to GConfClient

2001-01-04  Richard Hestilow  <hestilow@ximian.com>

	* gnome-settings-sound.[ch]: Added.
	
	* Makefile.am: Add gnome-settings-sound sources, link to libsounds.

	* gnome-settings-daemon.c: Call gnome_settings_sound_init.
	
2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* All: Eliminate compiler warnings

	* gnome-settings-daemon.h: Use __GNOME_SETTINGS_DAEMON_H for the
	enclosing macro

	* gnome-settings-background.c: Update

2001-12-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am
	(gnome_settings_daemon_SOURCES): Add
	gnome-settings-{keyboard|background}.[ch]