@@ -1,3 +1,10 @@
+Mon Jan 21 01:29:57 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-settings-keyboard.c: Move locate_pointer out.
+
+	* gnome-settings-mouse.c: Move locate_pointer in.  Clean up code.
+	Remove print statements.
+
 2002-01-14  Bradford Hovinen  <hovinen@ximian.com>
 
 	* Makefile.am (INCLUDES): Added missing -I$(top_srcdir)
